# structural-health-monitoring

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/core/: config.py  logging_config.py
scripts/: inspect_codebrim.py  prepare_dataset.py  verify_dataset.py
